<resources>
    <string name="app_name">Komotrack</string>
    <string name="get_started">Start</string>
    <string name="money_tracking">Money Tracking</string>
    <string name="text_screen_one">Your Companion for Tracking all you\'re expenses, Goals, and many more</string>
    <string name="visualize">Visualize</string>
    <string name="text_screen_two">Use visualization to track you\'re expenses, this will help you conscious about how much money get out from your pocket</string>
    <string name="next">Next</string>
    <string name="home_button">Home Button</string>
    <string name="article_button">Article Button</string>
    <string name="user_button">User Button</string>
    <string name="home">%1$s</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="latest_activity">Your Activities</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Please insert your name to make this app as your companion</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="lets_go">Lets Go</string>
    <string name="insert_button">Insert Button</string>
    <string name="add_activity">Add Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="select_categories">Select Categories</string>
    <string name="activity_name">Enter Activity Name</string>
    <string name="amount">Amount</string>
    <string name="activity_date">Activity Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="rp">Rp</string>
    <string name="rp_placeholder">%1$s.-</string>
    <string name="rp_placeholder_income">+%1$s.-</string>
    <string name="rp_placeholder_expense">-%1$s.-</string>
    <string name="your_stats">Your Stats</string>
    <string name="money_percentage">Money Percentage:</string>
    <string name="money_percentage_income">%.0f%% Income</string>
    <string name="money_percentage_expense">%.0f%% Expense</string>
    <string name="money_percentage_expense_ring">%.0f%%</string>
    <string name="latest_news">Latest News</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="screen_text_third">Make tracking easy with notification to help you to track your money flow</string>
    <string name="you_did_a_good_job">You Did a Good Job !</string>
    <string name="yout_did_what">Bruh, You Better than This !</string>
    <string name="text_description_success">Making your expense lower than your income is number 1 key for managing your money</string>
    <string name="text_description_failed">Making your expense higher will lead to disastrous money management, be careful!</string>
    <string name="greetings">Greetings,</string>
    <string name="notification">Notification</string>
    <string name="enable_or_disabled_notification">Enable or Disabled Notification</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_your_current_name">Edit Your Current Name</string>
    <string name="settings">Settings</string>
    <string name="enter_your_new_name">Input Name</string>
    <string name="notify_content">%s, Reminder to Track Your Money Today</string>
    <string name="notify_channel_name">Daily Reminder</string>
    <string name="work_tag">DAILY UNIQUE WORK</string>
    <string name="status_now">Status Now</string>
    <string name="read_some_articles_about_financial">Read Some Articles About Financial</string>
    <string name="something_went_wrong">Something Went Wrong Try Again Later\n%s</string>

    <string-array name="activity_categories">
        <item>@string/expenses</item>
        <item>@string/income</item>
    </string-array>
</resources>