<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/dp_16"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.EditNameDialog">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:textStyle="bold"
        android:text="@string/enter_your_new_name"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_activity_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:hint="@string/enter_your_name"
        app:boxCornerRadiusBottomEnd="@dimen/dp_18"
        app:boxCornerRadiusBottomStart="@dimen/dp_18"
        app:boxCornerRadiusTopEnd="@dimen/dp_18"
        app:boxCornerRadiusTopStart="@dimen/dp_18"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeWidth="2dp"
        android:layout_marginTop="@dimen/dp_16"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/primaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginVertical="@dimen/dp_24"
        android:background="@drawable/bg_button_primary_color"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/til_amount" />

</androidx.appcompat.widget.LinearLayoutCompat>