<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".ui.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/vp_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/nav_main" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.899" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bg_image_button"
        app:layout_constraintBottom_toBottomOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="@id/btn_home" />

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_button"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_article"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_main"
        app:tint="@color/secondaryDarkColor" />

    <ImageButton
        android:id="@+id/btn_article"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/article_button"
        android:src="@drawable/ic_article"
        app:layout_constraintBottom_toBottomOf="@+id/btn_home"
        app:layout_constraintEnd_toStartOf="@+id/btn_user"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_home"
        app:layout_constraintTop_toTopOf="@+id/btn_home"
        app:tint="@color/secondaryDarkColor" />

    <ImageButton
        android:id="@+id/btn_user"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/user_button"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="@+id/btn_article"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_article"
        app:layout_constraintTop_toTopOf="@+id/btn_article"
        app:tint="@color/secondaryDarkColor" />

</androidx.constraintlayout.motion.widget.MotionLayout>